fix whitespace

--- a/SourceMapViewer/app.css
+++ b/SourceMapViewer/app.css
@@ -1,1 +1,39 @@
-﻿
+﻿.color1 {
+    background-color: #fb7070;
+}
+
+.color2 {
+    background-color: #dbdb8d;
+}
+
+.color3 {
+    background-color: #ff7f0e;
+}
+
+.color4 {
+    background-color: #aec7e8;
+}
+
+.color5 {
+    background-color: #bcbd22;
+}
+
+.color6 {
+    background-color: #f7b6d2;
+}
+
+.color7 {
+    background-color: #ff9896;
+}
+
+.color8 {
+    background-color: #9edae5;
+}
+
+.color9 {
+    background-color: #17becf;
+}
+
+.color10 {
+    background-color: #909090;
+}
